# engine

./: .gitignore  AGENTS.md  Dockerfile  README.md  protocol_requirements.txt
example_protocol/: assigner.py  model.py  protocol.aimd  protocol.toml
node/: .oxfmtrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
node/src/: index.ts
node/tests/: engine.test.ts
python/: README.md  pyproject.toml
python/src/airalogy_engine/: __init__.py  engine.py  protocol_executor.py
python/tests/: conftest.py  test_engine.py
