[project]
name = "airalogy-engine"
version = "0.0.2"
description = "Airalogy protocol execute sandbox"
readme = "README.md"
authors = [{ name = "Airalogy Team" }]
requires-python = ">=3.13"
dependencies = ["boxlite==0.8.2"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
license = { text = "Apache-2.0" }

[project.urls]
Documentation = "https://github.com/airalogy/airalogy-engine#readme"
Source = "https://github.com/airalogy/airalogy-engine"


[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11,<0.12"

[dependency-groups]
dev = ["airalogy~=0.5.0", "pytest>=9.0.2", "pytest-asyncio>=0.25.0"]
